--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "chat-module-angular",
     "devDependencies": {
-        "webpack": "^4.30.0"
+        "webpack": "^4.30.0",
+        "webpack-cli": "^3.3.1"
     },
     "dependencies": {
         "async": "^2.6.0",
